--- a/Socket Debugger/Views/MainWindow.xaml
+++ b/Socket Debugger/Views/MainWindow.xaml
@@ -4,51 +4,16 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="Socket Debugger" Width="915" Height="610" Background="LightGray"
+    Title="Socket Debugger" Width="1000" Height="610" Background="LightGray"
     ResizeMode="NoResize" WindowStartupLocation="CenterScreen" mc:Ignorable="d"
     Loaded="MainWindow_OnLoaded">
 
     <Window.Resources>
-        <Style x:Key="CenterBottomButtonStyle" TargetType="Button">
-            <Setter Property="Width" Value="30" />
-            <Setter Property="Height" Value="30" />
-            <Setter Property="Padding" Value="5" />
-            <Setter Property="BorderBrush" Value="{x:Null}" />
-            <Setter Property="BorderThickness" Value="0" />
-            <Setter Property="Foreground" Value="#242424" />
-            <Setter Property="Background" Value="White" />
-            <Setter Property="Margin" Value="1 0" />
-        </Style>
-
-        <Style x:Key="RightFunctionButtonStyle" TargetType="Button">
-            <Setter Property="Height" Value="26" />
-            <Setter Property="FontSize" Value="14" />
-            <Setter Property="Foreground" Value="#242424" />
-            <Setter Property="Background" Value="White" />
-            <Setter Property="HorizontalAlignment" Value="Right" />
-            <Setter Property="VerticalAlignment" Value="Top" />
-            <Setter Property="HorizontalContentAlignment" Value="Center" />
-            <Setter Property="Padding" Value="10 2" />
-            <Setter Property="BorderThickness" Value="0" />
-        </Style>
-
-        <!--数据模板，类似Android里面ListView的Adapter-->
-        <DataTemplate x:Key="LeftListDataTemplate">
-            <!--数据模板，类似Android里面的ListView的ItemView-->
-            <StackPanel Orientation="Horizontal" Height="55">
-                <TextBlock Text="{Binding FunctionIcon}" FontSize="18" FontFamily="/Resources/Fonts/#iconfont"
-                           Foreground="#242424" VerticalAlignment="Center" />
-                <TextBlock Text="{Binding FunctionName}" VerticalAlignment="Center" Margin="10 0"
-                           Foreground="#242424" FontSize="18" />
-            </StackPanel>
-        </DataTemplate>
-
         <!--数据模板，类似Android里面ListView的Adapter-->
         <DataTemplate x:Key="CenterListDataTemplate">
             <!--数据模板，类似Android里面的ListView的ItemView-->
             <StackPanel Orientation="Horizontal" Height="55">
-                <TextBlock Text="&#xe628;" FontSize="18" FontFamily="/Resources/Fonts/#iconfont"
-                           Foreground="#242424" VerticalAlignment="Center" />
+                <Image Width="35" Height="35" Source="/Resources/Image/Monitor.png" />
                 <StackPanel Orientation="Vertical" VerticalAlignment="Center">
                     <TextBlock Text="{Binding Comment}" VerticalAlignment="Center"
                                Margin="10 5" Foreground="#242424" FontSize="16" />
@@ -65,17 +30,66 @@
 
     <Grid Margin="0 1 0 0">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="160" />
+            <ColumnDefinition Width="215" />
             <ColumnDefinition Width="215" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
         <!--  左边功能列表  -->
-        <ListView x:Name="LeftListView" Grid.Column="0" BorderThickness="0"
-                  SelectedIndex="0" SelectionChanged="LeftListView_SelectionChanged"
-                  ItemTemplate="{StaticResource LeftListDataTemplate}">
-            
-        </ListView>
+        <ListBox x:Name="LeftListBox" Grid.Column="0" BorderThickness="0"
+                 SelectedIndex="0" SelectionChanged="LeftListView_SelectionChanged">
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <Setter Property="Height" Value="60" />
+                    <!--更改ListBoxItem默认样式-->
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <ContentPresenter />
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.ItemContainerStyle>
+
+            <RadioButton Style="{StaticResource LeftRadioButtonStyle}">
+                <DockPanel Margin="10 0 0 0">
+                    <TextBlock Text="&#xe628;" Style="{StaticResource LeftTextBlockIconStyle}" />
+                    <TextBlock Text="TCP客户端" Style="{StaticResource LeftTextBlockStyle}" />
+                </DockPanel>
+            </RadioButton>
+            <RadioButton Style="{StaticResource LeftRadioButtonStyle}">
+                <DockPanel Margin="10 0 0 0">
+                    <TextBlock Text="&#xe628;" Style="{StaticResource LeftTextBlockIconStyle}" />
+                    <TextBlock Text="TCP服务端" Style="{StaticResource LeftTextBlockStyle}" />
+                </DockPanel>
+            </RadioButton>
+            <RadioButton Style="{StaticResource LeftRadioButtonStyle}">
+                <DockPanel Margin="10 0 0 0">
+                    <TextBlock Text="&#xe7b1;" Style="{StaticResource LeftTextBlockIconStyle}" />
+                    <TextBlock Text="UDP客户端" Style="{StaticResource LeftTextBlockStyle}" />
+                </DockPanel>
+            </RadioButton>
+            <RadioButton Style="{StaticResource LeftRadioButtonStyle}">
+                <DockPanel Margin="10 0 0 0">
+                    <TextBlock Text="&#xe7b1;" Style="{StaticResource LeftTextBlockIconStyle}" />
+                    <TextBlock Text="UDP服务端" Style="{StaticResource LeftTextBlockStyle}" />
+                </DockPanel>
+            </RadioButton>
+            <RadioButton Style="{StaticResource LeftRadioButtonStyle}">
+                <DockPanel Margin="10 0 0 0">
+                    <TextBlock Text="&#xe662;" Style="{StaticResource LeftTextBlockIconStyle}" />
+                    <TextBlock Text="WebSocket客户端" Style="{StaticResource LeftTextBlockStyle}" TextWrapping="Wrap" />
+                </DockPanel>
+            </RadioButton>
+            <RadioButton Style="{StaticResource LeftRadioButtonStyle}">
+                <DockPanel Margin="10 0 0 0">
+                    <TextBlock Text="&#xe662;" Style="{StaticResource LeftTextBlockIconStyle}" />
+                    <TextBlock Text="WebSocket服务端" Style="{StaticResource LeftTextBlockStyle}" TextWrapping="Wrap" />
+                </DockPanel>
+            </RadioButton>
+        </ListBox>
 
         <!--  中间用户自定义功能列表  -->
         <Grid Grid.Column="1" Margin="1 0">
@@ -94,18 +108,23 @@
                 <ListView x:Name="CenterListView" Visibility="Collapsed" BorderThickness="0"
                           SelectedIndex="0" SelectionChanged="CenterListView_SelectionChanged"
                           ItemTemplate="{StaticResource CenterListDataTemplate}">
-                    
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="ListBoxItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                            <Setter Property="Height" Value="60" />
+                        </Style>
+                    </ListBox.ItemContainerStyle>
                 </ListView>
             </Grid>
 
             <StackPanel Grid.Row="1" Orientation="Horizontal" Background="White" Height="30" Margin="0 1 0 0">
                 <Button Style="{StaticResource CenterBottomButtonStyle}" Click="AddButton_OnClick">
-                    <TextBlock Text="&#xe605;" FontFamily="/Resources/Fonts/#iconfont" Foreground="#242424"
+                    <TextBlock Text="&#xe605;" FontFamily="/Resources/#iconfont" Foreground="#242424"
                                VerticalAlignment="Center" />
                 </Button>
 
                 <Button Style="{StaticResource CenterBottomButtonStyle}" Click="DelButton_OnClick">
-                    <TextBlock Text="&#xe604;" FontFamily="/Resources/Fonts/#iconfont" Foreground="#242424"
+                    <TextBlock Text="&#xe604;" FontFamily="/Resources/#iconfont" Foreground="#242424"
                                VerticalAlignment="Center" />
                 </Button>
             </StackPanel>
@@ -139,7 +158,7 @@
 
                     <TextBlock x:Name="ServerTextBlock" Grid.Row="0" Grid.Column="0"
                                Margin="10" HorizontalAlignment="Left" VerticalAlignment="Center"
-                               FontSize="16" Foreground="#242424" Text="服务器" FontWeight="Bold"/>
+                               FontSize="16" Foreground="#242424" Text="服务器" FontWeight="Bold" />
 
                     <TextBlock x:Name="HostTextBlock" Grid.Row="1" Grid.Column="0"
                                Margin="10,0" VerticalAlignment="Top" FontSize="14" Text="111.198.10.15:12208" />
